<resources>
    <string name="app_name">STCalendar</string>
    <string name="start_year">Start Year</string>
    <string name="_20">20_</string>
    <string name="_19">19_</string>
    <string name="decrease_years">Decrease Years</string>
    <string name="increase_years">Increase Years</string>
    <string name="title_activity_date">dateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aug">Aug</string>
    <string name="feb">Feb</string>
    <string name="sep">Sep</string>
    <string name="nov">Nov</string>
    <string name="apr">Apr</string>
    <string name="jan">Jan</string>
    <string name="mar">Mar</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="oct">Oct</string>
    <string name="dec">Dec</string>
    <string name="start_month">Start Month</string>
    <string name="start_date">Start Date</string>
    <string name="start_hour">Start Hour</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="start_min">Start Min</string>
    <string name="_min5">5</string>
    <string name="_min50">50</string>
    <string name="_min6">6</string>
    <string name="_yr40">40</string>
    <string name="_yr2">2</string>
    <string name="_yr9">9</string>
    <string name="_yr8">8</string>
    <string name="_yr7">7</string>
    <string name="_yr6">6</string>
    <string name="_yr5">5</string>
    <string name="_yr4">4</string>
    <string name="_yr3">3</string>
    <string name="_yr1">1</string>
    <string name="_yr0">0</string>
    <string name="_yr80">80</string>
    <string name="_yr10">10</string>
    <string name="_yr50">50</string>
    <string name="_yr90">90</string>
    <string name="_yr70">70</string>
    <string name="_yr00">00</string>
    <string name="_yr20">20</string>
    <string name="_yr30">30</string>
    <string name="_min8">8</string>
    <string name="_min9">9</string>
    <string name="_min7">7</string>
    <string name="_min4">4</string>
    <string name="_min3">3</string>
    <string name="_min0">0</string>
    <string name="_min1">1</string>
    <string name="_min2">2</string>
    <string name="_min40">40</string>
    <string name="_min30">30</string>
    <string name="_min20">20</string>
    <string name="__min10">10</string>
    <string name="_min00">00</string>
    <string name="_hr12">12</string>
    <string name="_hr11">11</string>
    <string name="_hr10">10</string>
    <string name="_hr9">9</string>
    <string name="_hr8">8</string>
    <string name="_hr7">7</string>
    <string name="_hr6">6</string>
    <string name="_hr5">5</string>
    <string name="_hr4">4</string>
    <string name="_hr3">3</string>
    <string name="_hr2">2</string>
    <string name="_hr1">1</string>
    <string name="_hr0">0</string>
    <string name="_dt9">9</string>
    <string name="_dt8">8</string>
    <string name="_dt7">7</string>
    <string name="_dt6">6</string>
    <string name="_dt5">5</string>
    <string name="_dt3">3</string>
    <string name="_dt4">4</string>
    <string name="_dt2">2</string>
    <string name="_dt1">1</string>
    <string name="_dt0">0</string>
    <string name="_dt30">30</string>
    <string name="_dt20">20</string>
    <string name="_dt10">10</string>
    <string name="_dt00">00</string>
    <string name="main_endMinute">Minute</string>
    <string name="main_minute">Minute</string>
    <string name="main_hour">Hour</string>
    <string name="main_weekday">Weekday</string>
    <string name="main_day">Day</string>
    <string name="main_month">Month</string>
    <string name="main_year">Year</string>
    <string name="main_start">Start</string>
    <string name="main_endHour">Hour</string>
    <string name="main_endWeekday">Weekday</string>
    <string name="main_endDay">Day</string>
    <string name="main_endMonth">Month</string>
    <string name="main_endYear">Year</string>
    <string name="main_end">End</string>
    <string name="_18">18</string>
    <string name="_60">60</string>
    <!--<String name="prevYear"> PrevYear </String> -->
</resources>